--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="alternative" href="/atom.xml" title="guimei的博客" type="application/atom+xml">
   
   
-    <link rel="icon" href="/assets/img/favicon.ico">
+    <link rel="icon" href="/source/assets/img/favicon.ico">
   
   <link rel="stylesheet" href="/main.css?v=4.0.0.css">
   
@@ -38,7 +38,7 @@
 <div class="intrude-less">
 	<header id="header" class="inner">
 		<a href="/" class="profilepic">
-			<img src="/assets/blogImg/litten.png" class="js-avatar">
+			<img src="/source/assets/blogImg/litten.png" class="js-avatar">
 		</a>
 
 		<hgroup>
@@ -101,7 +101,7 @@
 	<div class="intrude-less">
 		<header id="header" class="inner">
 			<div class="profilepic">
-				<img src="/assets/blogImg/litten.png" class="js-avatar">
+				<img src="/source/assets/blogImg/litten.png" class="js-avatar">
 			</div>
 			<hgroup>
 			  <h1 class="header-author">guimei</h1>
